@@ -1,72 +1,40 @@
 plugins {
-  id 'java'
   id 'application'
-
+  id 'org.openjfx.javafxplugin' version '0.1.0'
 }
-
-group 'program'
-version '1.0-SNAPSHOT'
 
 repositories {
   mavenCentral()
 }
 
-java {
-  toolchain {
-    languageVersion = JavaLanguageVersion.of(16)
-  }
+dependencies {
+  // Log4j2
+  implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
+  implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
+
+  // JavaFX (либо через Maven, либо локально)
+  implementation files("lib/javafx/javafx.base.jar")
+  implementation files("lib/javafx/javafx.controls.jar")
+  implementation files("lib/javafx/javafx.fxml.jar")
+}
+
+javafx {
+  version = "17"
+  modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
 application {
   mainClass = 'program.telephone.Main'
-  applicationDefaultJvmArgs = ['-Dfile.encoding=UTF-8']
+
+  applicationDefaultJvmArgs = [
+          "--module-path", "${projectDir}/lib/javafx",
+          "--add-modules", "javafx.controls,javafx.fxml",
+          "-Dlog4j.configurationFile=${projectDir}/src/main/resources/program/telephone/log4j2.xml"
+  ]
 }
 
-javafx {
-  version = '17.0.2'
-  modules = ['javafx.controls', 'javafx.fxml']
-}
-
-dependencies {
-  implementation 'org.openjfx:javafx-controls:17.0.2'
-  implementation 'org.openjfx:javafx-fxml:17.0.2'
-  implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
-  implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
-
-  testImplementation platform('org.junit:junit-bom:5.9.1')
-  testImplementation 'org.junit.jupiter:junit-jupiter'
-}
-
-test {
-  useJUnitPlatform()
-}
-
-tasks.register('fatJar', Jar) {
-  manifest {
-    attributes 'Main-Class': application.mainClass
+processResources {
+  from('src/main/resources') {
+    include '**/*.fxml', '**/*.png', '**/*.xml'
   }
-  archiveClassifier = 'all'
-  from sourceSets.main.output
-  dependsOn configurations.runtimeClasspath
-  from {
-    configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
-  }
-  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-}
-
-sourceSets {
-  main {
-    resources {
-      srcDirs = ['src/main/resources']
-    }
-  }
-}
-
-tasks.withType(JavaCompile).configureEach {
-  options.encoding = 'UTF-8'
-}
-
-tasks.withType(Javadoc).configureEach {
-  source = sourceSets.main.allJava
-  options.memberLevel = JavadocMemberLevel.PRIVATE
 }
